feat(search): implement automatic debounced search filters and discount price tag badges on product cards